修復 WebSocket 連接問題，添加 HTTP 降級模式 - WebSocket 連接失敗時自動切換到 HTTP 模式，修復前端錯誤，添加降級 API 端點，創建用戶友好狀態指示器

--- a/public/index.html
+++ b/public/index.html
@@ -443,9 +443,11 @@
             // 等待其他模組載入完成
             setTimeout(function() {
                 // 強制請求一次歷史記錄
-                if (window.wsManager && window.wsManager.isConnected()) {
+                if (window.wsManager && window.wsManager.isConnected) {
                     console.log('📜 通過 WebSocket 請求歷史記錄');
-                    window.wsManager.getHistory();
+                    if (typeof window.wsManager.getHistory === 'function') {
+                        window.wsManager.getHistory();
+                    }
                 } else {
                     console.log('📜 通過 HTTP API 請求歷史記錄');
                     fetch('/api/history?room_id=test-room')
